# shield_optimizer

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  Shield-Optimizer.ps1  reddit-post.md  release.sh  shield-optimizer-config.json
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: appimage-wayland-test.yml  tests.yml  v2-release.yml  v2-tests.yml
demos/: ScreenshotGallery.ps1
docs/: FEATURES.md
testing/: Makefile
tests/: Shield-Optimizer.Tests.ps1  TestHelpers.psm1
tests/fixtures/: dumpsys-package-launcher.txt
v2/: .gitignore  ATVTOOLS-PARITY.md  CHANGELOG.md  HANDOFF.md  Makefile  PLAN.md  README.md  REMOTE-LATENCY-PLAN.md  package-lock.json  package.json  release.sh
v2/data/app-lists/: common.json  googletv.json  shield.json
v2/screenshots/: README.md  build-gif.sh  capture.mjs
v2/src/: app.html
v2/src-tauri/: Cargo.toml  tauri.conf.json
v2/src-tauri/capabilities/: default.json
v2/src-tauri/icons/: icon.icns
v2/src-tauri/src/: lib.rs  main.rs
v2/src-tauri/src/adb/: driver.rs  install.rs  mod.rs  parse.rs  remote_input.rs  scan.rs
v2/src-tauri/src/commands/: apps.rs  backup.rs  devices.rs  files.rs  health.rs  home_tracking.rs  input.rs  install.rs  launcher.rs  loader.rs  mod.rs  optimize.rs  recovery.rs  scan.rs  screenshot.rs  sideload.rs  snapshot.rs  state.rs  tuning.rs
v2/src-tauri/src/engine/: app_lists.rs  detection.rs  launcher.rs  mod.rs  optimize.rs  safety.rs  snapshot.rs  types.rs
v2/src/lib/: api.ts  app-files-catalog.json  demo-apps.json  demo-mock.ts  prefs.ts  sideload-catalog.json  theme.ts  types.ts  usage.ts
v2/src/lib/components/: AppRow.svelte  FilesTab.svelte  OptimizeTab.svelte  RamBadge.svelte  RemoteTab.svelte  SideloadTab.svelte  StateBadge.svelte  TweaksTab.svelte  UsageBadge.svelte
v2/src/routes/: +layout.svelte  +page.svelte
v2/src/routes/devices/[serial]/: +page.svelte
v2/src/routes/snapshots/: +page.svelte
v2/updater/: latest.json
