[package]
name = "shield-optimizer-v2"
version = "0.1.0"
description = "Shield Optimizer v2 — Tauri/Rust rewrite of the Android TV debloater"
authors = ["Bryan Roscoe"]
edition = "2021"
rust-version = "1.81"

[lib]
# The `_lib` suffix is necessary to keep the lib name unique vs. the bin name
# on Windows (see https://github.com/rust-lang/cargo/issues/8519).
name = "shield_optimizer_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime — needed for Tauri command futures and ADB subprocess I/O
tokio = { version = "1", features = ["process", "io-util", "time", "macros", "rt-multi-thread", "sync", "fs"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Parsing
regex = "1"
once_cell = "1"

# Time / dates for snapshot timestamps
chrono = { version = "0.4", features = ["serde"] }

# Tracing for structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Directory resolution per OS (snapshots, config)
dirs = "5"

# Async traits — for the AdbDriver abstraction
async-trait = "0.1"

[dev-dependencies]
pretty_assertions = "1"
