[package]
name = "shield-optimizer-v2"
version = "2.0.0-beta.10"
description = "Shield Optimizer v2 — Tauri/Rust rewrite of the Android TV debloater"
authors = ["Bryan Roscoe"]
edition = "2021"
rust-version = "1.81"

[lib]
# The `_lib` suffix is necessary to keep the lib name unique vs. the bin name
# on Windows (see https://github.com/rust-lang/cargo/issues/8519).
name = "shield_optimizer_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime — needed for Tauri command futures and ADB subprocess I/O
tokio = { version = "1", features = ["process", "io-util", "time", "macros", "rt-multi-thread", "sync", "fs"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Parsing
regex = "1"

# Time / dates for snapshot timestamps
chrono = { version = "0.4", features = ["serde"] }

# Screenshot preview encoding (PNG bytes → data: URL)
base64 = "0.22"

# Tracing for structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Directory resolution per OS (snapshots, config)
dirs = "5"

# Async traits — for the AdbDriver abstraction
async-trait = "0.1"

# HTTPS download of Google's platform-tools (rustls = no OpenSSL native dep)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"

# ZIP extraction for platform-tools-latest-<os>.zip (and reading APK manifests)
zip = { version = "2", default-features = false, features = ["deflate"] }

# Decode an APK's binary AndroidManifest.xml to read its package id
axmldecoder = "0.5"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
